--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -26,11 +26,11 @@
 
 {{ partial "video.html" . }}
 
-{{ partial "form.html" . }}
-
 {{ partial "support-text.html" . }}
 
 {{ partial "footer.html" . }}
+
+{{ partial "end.html" . }}
 
 </body>
 </html>
