--- a/site/layouts/partials/as-seen-on.html
+++ b/site/layouts/partials/as-seen-on.html
@@ -1,4 +1,4 @@
-<div class="subhero__as-seen-on mobile-column-wrap">
+<div class="subhero__as-seen-on mobile-column-wrap d-lg-none">
     <span class="text-left">And recognized in:</span>
     <div class="subhero__as-seen-on-icons images-in-a-row">
 
