--- a/site/layouts/partials/capabilities.html
+++ b/site/layouts/partials/capabilities.html
@@ -1,7 +1,7 @@
 <section class="capabilities">
     <div class="container practice-areas">
-        <h2 class="text-center font-weight-semi">WHAT WE CAN DO FOR YOU</h2>
-        <div class="what-we-can-do-container mobile-column-wrap">
+        <h2 class="text-center font-weight-bold">WHAT WE CAN DO FOR YOU</h2>
+        <div class="what-we-can-do-container mobile-desktop">
             <div class="specialty">
                 <div class="capability capability__max-compensation icon-max-compensation">
                 </div>
