--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -1,163 +1,9 @@
 <!-- footer Start -->
-<div class="section-wrap footer text-center mobile-column-wrap">
-        <img data-src="{{ .Site.BaseURL }}img/wlf_long_white.svg" src=""
-             class="img-fluid lazyload" alt="Wilshire Law Firm logo">
+<div class="section-wrap footer text-center">
+    <img data-src="{{ .Site.BaseURL }}img/wlf_long_white.svg" src=""
+         class="img-fluid lazyload" alt="Wilshire Law Firm logo">
     <div class="footer__address">3055 Wilshire Blvd., 12th Floor<br> Los Angeles, CA 90010</div>
-    <div class="footer__copyright">&copy; 2020 Wilshire Law Firm | <a href="https://www.wilshirelawfirm.com/privacy/" target="_blank"
-                                            title="Wilshire Law Firm Privacy Policy" rel="noreferrer">Privacy Policy</a>
+    <div class="footer__copyright">&copy; 2020 Wilshire Law Firm |
+        <a href="https://www.wilshirelawfirm.com/privacy/" target="_blank" title="Wilshire Law Firm Privacy Policy" rel="noreferrer">Privacy Policy</a>
     </div>
 </div>
-
-<!-- START MOBILE CALL POPUP -->
-<div id="mobile-pop-container">
-    <div class="visible-xs visible-sm">
-        <div class="mobile-call-pop text-center">
-            <a class="mobile-call-btn capPhone" href="tel:8553350244"
-               onclick="dataLayer.push({'event':'Contact', 'eventAction':'Call', 'eventNumber': 'Mobile Footer - 8553350244'});">
-                <i class="icon-tap2call"></i> <span class="tap-to-call-text">TAP TO CALL NOW</span>
-            </a>
-            <!--<span class="available white">AVAILABLE NOW</span>-->
-        </div>
-    </div>
-</div>
-<!-- END MOBILE CALL POPUP -->
-<script src="{{ .Site.BaseURL }}js/jquery-3.4.1.slim.min.js"></script>
-<script src="{{ .Site.BaseURL }}js/lazysizes.min.js"></script>
-
-<link rel="stylesheet" href="{{ .Site.BaseURL }}css/bootstrap.min.css">
-
-<link rel="stylesheet" href="{{ .Site.BaseURL }}css/swipers.min.css">
-
-<link rel="stylesheet" href="{{ .Site.BaseURL }}css/swiper.min.css">
-
-<link rel="stylesheet" href="{{ .Site.BaseURL }}css/landing-page-2019.min.css">
-
-<link rel="stylesheet" href="/css/bootstrap-formhelpers.min.css">
-
-<link rel="stylesheet" href="{{ .Site.BaseURL }}css/lp19.min.css">
-
-<script src="{{ .Site.BaseURL }}js/bootstrap.bundle.min.js"></script>
-<script src="{{ .Site.BaseURL }}js/bigtext.min.js"></script>
-
-<link rel="stylesheet" href="{{ .Site.BaseURL }}css/bootstrap-formhelpers.min.css">
-
-<script src="{{ .Site.BaseURL }}js/bootstrap-formhelpers.min.js"></script>
-<script src="{{ .Site.BaseURL }}js/validate.min.js"></script>
-<script src="{{ .Site.BaseURL }}js/underscore-min.js"></script>
-<script src="{{ .Site.BaseURL }}js/modernizr-custom.js"></script>
-<script>
-    (function (i, n, v, o, c, a) {
-        i.InvocaTagId = o;
-        var s = n.createElement('script');
-        s.type = 'text/javascript';
-        s.async = true;
-        s.src = ('https:' === n.location.protocol ? 'https://' : 'http://') + v;
-        var fs = n.getElementsByTagName('script')[0];
-        fs.parentNode.insertBefore(s, fs);
-    })(window, document, 'solutions.invocacdn.com/js/invoca-latest.min.js', '1695/0270988258');
-</script>
-
-<script>
-    $(window).on('load', function () {
-        $(".big_text1").bigtext();
-        $(".big_text2").bigtext();
-        $(".big_text3").bigtext();
-        $(".big_text4").bigtext();
-        $(".big_text5").bigtext();
-        $(".subhero__no-win-desktop-no-win-text").bigtext();
-        $(".subhero__recovered-text1").bigtext();
-        $(".headline__big-text").css('opacity', '1');
-        $(".headline__big-text2").css('opacity', '1');
-        $(".herolower__text").bigtext();
-        $(".header__wrap .subhero__phone-num").bigtext();
-        $(".section-header-right").css('visibility', 'visible');
-        document.getElementById('pageurl').value = window.location.href;
-        document.getElementById('pageurl-bottom').value = window.location.href;
-        $("form").removeClass("d-none");
-
-
-        sessionStorage.videoLoaded = null;
-        $.fn.inView = function(){
-            //Window Object
-            var win = $(window);
-            //Object to Check
-            obj = $(this);
-            //the top Scroll Position in the page
-            var scrollPosition = win.scrollTop();
-            //the end of the visible area in the page, starting from the scroll position
-            var visibleArea = win.scrollTop() + win.height();
-            //the end of the object to check
-            var objEndPos = (obj.offset().top + obj.outerHeight());
-
-            return(visibleArea >= objEndPos && scrollPosition <= objEndPos ? true : false)
-        };
-
-        $(window).scroll(function(){
-            if (sessionStorage.videoLoaded == "1") {
-                // console.log("sessionStorage.videoLoaded=" + sessionStorage.videoLoaded);
-            }else {
-                if ($("#videoflag").inView()) {
-                    sessionStorage.videoLoaded = "1";
-                    // console.log("in view");
-                    var video_wrapper = $('.placeholder-youtube-video');
-                    $(video_wrapper).addClass("placeholder-youtube-video--active");
-                    video_wrapper.html('<iframe id="video" allowfullscreen frameborder="0" class="embed-responsive-item" src="' + video_wrapper.data('yt-url') + '"></iframe>');
-                }
-            }
-        });
-    });
-</script>
-<script src="{{ .Site.BaseURL }}js/validatorCallOut.js"></script>
-<!-- begin ClickGUARD Tracking Code -->
-<script type="application/javascript">
-    (function () {
-        window.cg_convert = function (x, y) {
-            if (window._cg_convert) window._cg_convert(x || null, y || null); else setTimeout(function () {
-                cg_convert(x || null, y || null)
-            }, 500);
-        };
-        var script = document.createElement("script");
-        script.async = true;
-        script.defer = true;
-        script.type = "application/javascript";
-        script.src = 'https://io.clickguard.com/s/cHJvdGVjdG9y/je8TmfGv';
-        document.body.appendChild(script);
-    })();
-</script>
-<noscript><img src="https://io.clickguard.com/n/cHJvdGVjdG9y/je8TmfGv(43 B)
-https://io.clickguard.com/n/cHJvdGVjdG9y/je8TmfGv
-" alt="noscript"/></noscript>
-<!-- end ClickGUARD Tracking Code -->
-
-<!-- begin ClickGUARD Conversion Code -->
-<script type="text/javascript">
-  jQuery(document).ready(function ($) {
-    $(function () {
-      $('.subhero__phone-num').on('click', function () {
-        cg_convert('Header phone number');
-      });
-    });
-    $(function () {
-      $('.hero .gform_button').on('click', function () {
-        cg_convert('Hero Form');
-      });
-    });
-    $(function () {
-      $('.gform_footer .gform_button').on('click', function () {
-        cg_convert('Footer Form');
-      });
-    });
-    $(function () {
-      $('.ccl-slider-bubble').on('click', function () {
-        cg_convert('Client chat live');
-      });
-    });
-    $(function () {
-      $('.mobile-call-btn').on('click', function () {
-        cg_convert('Tap to call');
-      });
-    });
-
-  });
-</script>
-<!-- end ClickGUARD Conversion Code -->
