--- a/site/layouts/partials/head_custom.html
+++ b/site/layouts/partials/head_custom.html
@@ -351,6 +351,15 @@ Do not put anything in this file - it's only here so that hugo won't throw an er
         font-size: 10px;
         width: 100%;
     }
+    .standard .hero__headline h2{
+        font-size: 4.5vw;
+    }
+    @media screen and (min-width: 414px) {
+        .standard .hero__headline h2{
+            font-size: 22.5px;
+        }
+    }
+
     .desktop .hero__headline h2{
         font-size: 18px;
     }
