--- a/site/layouts/partials/herolower.html
+++ b/site/layouts/partials/herolower.html
@@ -1,4 +1,4 @@
-<div class="herolower__wrap  d-none d-md-block d-lg-none">
+<div class="herolower__wrap d-md-block d-lg-none">
     <div class="herolower mobile-column-wrap">
         <div class="herolower__leftblock ">
             <picture>
@@ -19,7 +19,7 @@
         </div>
     </div>
 </div>
-<div class="subhero__wrap d-none d-lg-block">
+<div class="subhero__wrap d-none d-lg-block desktop">
     <div class="container-fluid u-remove-all-padding">
         <div class="subhero">
             <div class="subhero__as-seen-on">
