--- a/site/layouts/partials/support-text.html
+++ b/site/layouts/partials/support-text.html
@@ -1,47 +1,126 @@
-<section class="supporttext" id="wlf-form2">
+<div class="wlf-form whywlf">
+    <div class="container">
+        <div class="row">
+            <div class="d-none d-lg-block col-lg-12">
+                <h2 class="text-uppercase">Speak To The Best Personal Injury Lawyers</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="offset-sm-1 col-sm-10 offset-md-2 col-md-8 offset-lg-0 col-lg-4" STYLE="background: #3c4e66; display: flex;">
+                <div class="wlf-form__container">
+                    <h3 class="text-left font-weight-bold">FREE CONSULTATION 24/7</h3>
+                    <noscript>PLEASE ENABLE JAVASCRIPT IN YOUR BROWSER TO SEE THE FORM</noscript>
+                    <form name="LP19 Bottom Form" id="LP19_Bottom_Form" class="d-none" method="POST" data-netlify="true" action="/thank-you/" netlify-honeypot="honeypot-bot-field">
+                        <div class="form-group d-none">
+                            <label>Don’t fill this out if you're human: <input name="honeypot-bot-field" /></label>
+                        </div>
+                        <div class="form-group">
+                            <label for="firstName_bottom">First Name</label>
+                            <input  name="firstName" class="form-control wlf-form--empty" id="firstName_bottom" placeholder="First Name" aria-label="Enter Your First Name">
+                            <div class="messages"></div>
+                        </div>
+                        <div class="form-group">
+                            <label for="lastName_bottom">Last Name</label>
+                            <input name="lastName" class="form-control wlf-form--empty" id="lastName_bottom" placeholder="Last Name" aria-label="Enter Your Last Name">
+                            <div class="messages"></div>
+                        </div>
+                        <div class="form-group">
+                            <label for="phone_bottom">Phone</label>
+                            <input name="phone" type="tel" class="form-control bfh-phone wlf-form--empty" data-country="US" id="phone_bottom" placeholder="Phone" aria-label="Enter Your Phone">
+                            <div class="messages"></div>
+                        </div>
+                        <div class="form-group">
+                            <label for="email_bottom">Email</label>
+                            <input name="email" type="email" class="form-control wlf-form--empty" id="email_bottom" placeholder="Email" aria-label="Enter Your Email">
+                            <div class="messages"></div>
+                        </div>
+                        <div class="form-group">
+                            <label for="bottom-form-textarea">Tell Us How We Can Help You</label>
+                            <textarea name="description" class="form-control wlf-form--empty" id="bottom-form-textarea" rows="3" style="height:100px;" placeholder="Tell Us How We Can Help You" aria-label="Tell Us How We Can Help You"></textarea>
+                            <div class="messages"></div>
+                        </div>
+                        <div class="form-group">
+                            <input name="websource" value="Website" type="hidden">
+                            <div class="messages"></div>
+                        </div>
+                        <div class="form-group">
+                            <input type="hidden" id="pageurl-bottom"  name="pageurl-bottom" value="pageurl-bottom" />
+                            <input name="branchname-bottom" id="branchname-bottom" type="hidden" value="lp19short">
+                            <div class="messages"></div>
+                        </div>
+                        <div class="form-group whywlf__submit">
+                            <input name="btnSubmit" id="btnSubmitBottom" type="submit" value="GET HELP NOW">
+                            <div class="messages"></div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <div class="whywlf__paragraph_container offset-sm-1 col-sm-10 offset-md-2 col-md-8 offset-lg-0 col-lg-7">
+                <picture class="d-none d-lg-block">
+                    <source data-srcset="{{ .Site.BaseURL }}img/award_top25.webp" type="image/webp"
+                            class="img-fluid">
+                    <source data-srcset="{{ .Site.BaseURL }}img/award_top25.jpg" type="image/jpg"
+                            class="img-fluid">
+                    <img data-src="{{ .Site.BaseURL }}img/award_top25.jpg"
+                         src="" class="img-fluid lazyload float-right"
+                         alt="Top 100 National Trial Lawyers Badge">
+                </picture>
+
+                <div class="text-left supporttext__paragraph_container">
+                    <div class="supporttext__paragraph_container__header_mobile d-md-flex d-lg-none">
+                        <h2 class="text-uppercase">Speak To The Best Personal Injury Lawyers</h2>
+                        <picture class="d-md-inline-block d-lg-none">
+                            <source data-srcset="{{ .Site.BaseURL }}img/award_top25.webp" type="image/webp"
+                                    class="img-fluid">
+                            <source data-srcset="{{ .Site.BaseURL }}img/award_top25.jpg" type="image/jpg"
+                                    class="img-fluid">
+                            <img data-src="{{ .Site.BaseURL }}img/award_top25.jpg"
+                                 src="" class="img-fluid lazyload"
+                                 alt="Top 100 National Trial Lawyers Badge">
+                        </picture>
+                    </div>
+
+                    <p>
+                        In order to get the compensation that you deserve, you must work with the best car accident law
+                        firm in your area. Our dedicated team of car accident lawyers will fight for you against the
+                        insurance company’s attempts to weaken your claim. Because of this, Wilshire Law Firm has
+                        familiarized itself with how insurance companies work and we know how to counteract their
+                        delay-and-deny tactics. It is common for us to double, triple, or even quadruple an insurance
+                        company’s initial settlement offer. We have won more than <strong>$400 million</strong> for our
+                        clients. If you want to get maximum compensation for your damages, injuries and losses, call
+                        Wilshire Law Firm today. With our team of expert car accident attorneys, you will never have to
+                        settle for less than you deserve. Call now or tap the button below for a free consultation!
+                    </p>
+                    <p>
+                        Wilshire Law Firm's award-winning have a history of winning our
+                        client’s cases. Our are committed to protecting your rights and
+                        ensuring that you are paid generously for your rights being violated.
+                    </p>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</div>
+
+
     <div class="mobile-column-wrap">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
                 <div class="col-8">
-                    <h2 class="text-uppercase">
-                        Speak To The Best Personal Injury Lawyers
-                    </h2>
+
                 </div>
                 <div class="col">
-                    <picture>
-                        <source data-srcset="{{ .Site.BaseURL }}img/award_top25.webp" type="image/webp"
-                                class="img-fluid">
-                        <source data-srcset="{{ .Site.BaseURL }}img/award_top25.jpg" type="image/jpg"
-                                class="img-fluid">
-                        <img data-src="{{ .Site.BaseURL }}img/award_top25.jpg"
-                             src="" class="img-fluid lazyload float-right"
-                             alt="Top 100 National Trial Lawyers Badge">
-                    </picture>
+
                 </div>
             </div>
           <div class="row">
             <div class="col-lg-7">
 
-              <p class="swaptextp" id="paraSwap">
-                In order to get the compensation that you deserve, you must work with the best car accident law
-                firm in your area. Our dedicated team of car accident lawyers will fight for you against the
-                insurance company’s attempts to weaken your claim. Because of this, Wilshire Law Firm has
-                familiarized itself with how insurance companies work and we know how to counteract their
-                delay-and-deny tactics. It is common for us to double, triple, or even quadruple an insurance
-                company’s initial settlement offer. We have won more than <strong>$400 million</strong> for our
-                clients. If you want to get maximum compensation for your damages, injuries and losses, call
-                Wilshire Law Firm today. With our team of expert car accident attorneys, you will never have to
-                settle for less than you deserve. Call now or tap the button below for a free consultation!
-              </p>
-              <p class="swaptextp paragraph">
-                Wilshire Law Firm's award-winning <span class="insertKW"></span> have a history of winning our
-                client’s cases. Our <span class="insertKW"></span> are committed to protecting your rights and
-                ensuring that you are paid generously for your rights being violated.
-              </p>
+
             </div>
           </div>
         </div>
 
-
     </div>
-</section>
+</div>
