--- a/site/layouts/partials/whywlf.html
+++ b/site/layouts/partials/whywlf.html
@@ -1,5 +1,5 @@
-<div class="whywlf mobile-column-wrap">
-    <h2 class="font-weight-semi">WHY WILSHIRE LAW FIRM</h2>
+<div class="whywlf mobile-desktop">
+    <h2 class="font-weight-bold">WHY WILSHIRE LAW FIRM</h2>
     <p>
         Our award-winning team of more than 100 legal professionals doesn’t leave any case up to chance. We confidently
         prepare every case for trial and are not afraid to take your case to court. Our innovative legal strategies will
