--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -1,9 +1,11 @@
 <!-- footer Start -->
-<div class="section-wrap footer text-center">
-    <img data-src="{{ .Site.BaseURL }}img/wlf_long_white.svg" src=""
-         class="img-fluid lazyload" alt="Wilshire Law Firm logo">
-    <div class="footer__address">3055 Wilshire Blvd., 12th Floor<br> Los Angeles, CA 90010</div>
-    <div class="footer__copyright">&copy; 2020 Wilshire Law Firm |
-        <a href="https://www.wilshirelawfirm.com/privacy/" target="_blank" title="Wilshire Law Firm Privacy Policy" rel="noreferrer">Privacy Policy</a>
+<div class="section-wrap-footer text-center">
+    <div class="footer">
+        <img data-src="{{ .Site.BaseURL }}img/wlf_long_white.svg" src=""
+             class="img-fluid lazyload" alt="Wilshire Law Firm logo">
+        <div class="footer__address">3055 Wilshire Blvd., 12th Floor<br> Los Angeles, CA 90010</div>
+        <div class="footer__copyright">&copy; 2020 Wilshire Law Firm |
+            <a href="https://www.wilshirelawfirm.com/privacy/" target="_blank" title="Wilshire Law Firm Privacy Policy" rel="noreferrer">Privacy Policy</a>
+        </div>
     </div>
 </div>
