--- a/site/layouts/partials/hero.html
+++ b/site/layouts/partials/hero.html
@@ -50,7 +50,7 @@
                 <img data-src="{{ .Site.BaseURL }}img/attorneys-desktop.png" src="" class="img-fluid lazyload" alt="Group of Attorneys">
             </picture>
 
-            <div class="wlf-form whywlf d-lg-flex" id="wlf-form">
+            <div class="wlf-form d-lg-flex" id="wlf-form">
                 <div class="wlf-form__container">
                     <div class="hero__form-title text-left">FREE CONSULTATION 24/7</div>
                     <div class="wlf-form__container">
