--- a/site/layouts/partials/support-text.html
+++ b/site/layouts/partials/support-text.html
@@ -6,7 +6,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="offset-sm-1 col-sm-10 offset-md-2 col-md-8 offset-lg-0 col-lg-4" STYLE="background: #3c4e66; display: flex;">
+            <div class="whywlf__form__container__before offset-sm-1 col-sm-10 offset-md-2 col-md-8 offset-lg-0 col-lg-4" STYLE="background: #3c4e66; display: flex;">
                 <div class="wlf-form__container">
                     <h3 class="text-left font-weight-bold">FREE CONSULTATION 24/7</h3>
                     <noscript>PLEASE ENABLE JAVASCRIPT IN YOUR BROWSER TO SEE THE FORM</noscript>
