--- a/site/themes/airspace-hugo/static/css/landing-page-2019.css
+++ b/site/themes/airspace-hugo/static/css/landing-page-2019.css
@@ -199,10 +199,6 @@ h2 {
     color: #fff
 }
 
-
-
-
-
 @media only screen and (min-width:768px) {
     .header {
         padding: 4px 2.6vw;
@@ -618,14 +614,28 @@ h2 {
 .featured-result__sect4 textarea {
     height: 100px
 }
-
-.footer {
+.section-wrap-footer{
     background: #3c4e66;
+}
+.footer {
     color: #fff;
     font-weight: 100;
+    margin: auto;
+    max-width: 414px;
     padding: 20px 0
 }
-
+@media screen and(min-width: 992px) {
+    .footer {
+        align-items: center;
+        justify-content: space-around;
+        display: flex;
+        font-size: 12px;
+        max-width: 1440px;
+    }
+    .footer br{
+        display: none;
+    }
+}
 .footer .logo {
     margin-bottom: 20px
 }
@@ -706,6 +716,11 @@ h2 {
 }
 .footer__copyright{
     margin-bottom: 10px;
+}
+@media only screen and (min-width:992px) {
+    .footer__address,.footer__copyright{
+        margin: 0px;
+    }
 }
 button {
     height: 5vw;
@@ -790,6 +805,16 @@ a.nav-link {
         padding: 20px 5px;
     }
 }
+@media only screen and (max-width:767px) {
+
+    .whywlf__form__container__before {
+        background: #3c4e66;
+        display: flex;
+        max-width: 414px;
+        margin: auto;
+    }
+}
+
 .wlf-form ul {
     list-style: none;
     padding: 0
@@ -900,8 +925,8 @@ div.ginput_complex.ginput_container.gf_name_has_2 span {
 }
 
 @media only screen and (min-width:992px) {
-    .form-group{
-        margin-bottom: 10px;
+    .wlf-form.whywlf .form-group{
+        margin-bottom: 16px;
     }
     .wlf-form{
         background: #e9e9e9;
@@ -923,6 +948,11 @@ div.ginput_complex.ginput_container.gf_name_has_2 span {
     }
     .gform_button.button {
         height: auto
+    }
+}
+@media only screen and (min-width:1440px) {
+    .form-group{
+
     }
 }
 @media only screen and (min-width:1000px) {
@@ -971,6 +1001,11 @@ div.ginput_complex.ginput_container.gf_name_has_2 span {
 .form-control{
     height: 50px;
 }
+
+.hero .form-group{
+    margin-bottom: 0.5vw;
+}
+
 textarea, input[type="range"], input, input:matches([type="password"], [type="search"]){
     border-radius: 0;
 }
@@ -1541,6 +1576,13 @@ img {
 }
 .supporttext__paragraph_container__header_mobile h2{
     width: 60%;
+}
+@media only screen and (max-width: 575px) {
+    .supporttext__paragraph_container{
+        float: none;
+        max-width: 414px;
+        margin: auto;
+    }
 }
 @media only screen and (min-width:768px) and (max-width: 991px) {
     .supporttext__paragraph_container{
