--- a/site/themes/airspace-hugo/static/css/landing-page-2019.css
+++ b/site/themes/airspace-hugo/static/css/landing-page-2019.css
@@ -938,6 +938,9 @@ div.ginput_complex.ginput_container.gf_name_has_2 span {
     .wlf-form.whywlf .form-group{
         margin-bottom: 16px;
     }
+    .bottom-form.wlf-form.whywlf .form-group{
+        margin-bottom: 12px;
+    }
     .wlf-form{
         background: #e9e9e9;
     }
