--- a/site/layouts/partials/support-text.html
+++ b/site/layouts/partials/support-text.html
@@ -1,8 +1,8 @@
 <div class="wlf-form whywlf bottom-form">
     <div class="container">
         <div class="row">
-            <div class="d-none d-lg-block col-lg-12">
-                <h2 class="text-uppercase">Speak To The Best Personal Injury Lawyers</h2>
+            <div class="d-none d-lg-block col-lg-12 text-left" style="padding-left:0;">
+                <h2 class="text-uppercase">Speak To The Best Employment And Class Action Lawyers</h2>
             </div>
         </div>
         <div class="row">
