--- a/site/layouts/partials/support-text.html
+++ b/site/layouts/partials/support-text.html
@@ -57,26 +57,26 @@
             </div>
             <div class="whywlf__paragraph_container offset-sm-1 col-sm-10 offset-md-2 col-md-8 offset-lg-0 col-lg-7">
                 <picture class="d-none d-lg-block">
-                    <source data-srcset="{{ .Site.BaseURL }}img/award_top25.webp" type="image/webp"
+                    <source data-srcset="{{ .Site.BaseURL }}img/CATLA-brass.webp" type="image/webp"
                             class="img-fluid">
-                    <source data-srcset="{{ .Site.BaseURL }}img/award_top25.jpg" type="image/jpg"
+                    <source data-srcset="{{ .Site.BaseURL }}img/CATLA-brass.png" type="image/png"
                             class="img-fluid">
-                    <img data-src="{{ .Site.BaseURL }}img/award_top25.jpg"
+                    <img data-src="{{ .Site.BaseURL }}img/CATLA-brass.png"
                          src="" class="img-fluid lazyload float-right"
-                         alt="Top 100 National Trial Lawyers Badge">
+                         alt="">
                 </picture>
 
                 <div class="text-left supporttext__paragraph_container">
                     <div class="supporttext__paragraph_container__header_mobile d-md-flex d-lg-none">
                         <h2 class="text-uppercase">Speak To The Best Personal Injury Lawyers</h2>
                         <picture class="d-md-inline-block d-lg-none">
-                            <source data-srcset="{{ .Site.BaseURL }}img/award_top25.webp" type="image/webp"
+                            <source data-srcset="{{ .Site.BaseURL }}img/CATLA-brass.webp" type="image/webp"
                                     class="img-fluid">
-                            <source data-srcset="{{ .Site.BaseURL }}img/award_top25.jpg" type="image/jpg"
+                            <source data-srcset="{{ .Site.BaseURL }}img/CATLA-brass.png" type="image/png"
                                     class="img-fluid">
-                            <img data-src="{{ .Site.BaseURL }}img/award_top25.jpg"
+                            <img data-src="{{ .Site.BaseURL }}img/CATLA-brass.png"
                                  src="" class="img-fluid lazyload"
-                                 alt="Top 100 National Trial Lawyers Badge">
+                                 alt="">
                         </picture>
                     </div>
 
