--- a/site/layouts/partials/head_custom.html
+++ b/site/layouts/partials/head_custom.html
@@ -300,7 +300,7 @@ Do not put anything in this file - it's only here so that hugo won't throw an er
 
 
     .desktop .hero {
-        height: 23vw;
+        height: 25vw;
     }
 
     @media only screen and (min-width:1440px) {
@@ -347,7 +347,7 @@ Do not put anything in this file - it's only here so that hugo won't throw an er
         max-width: none;
         display: flex;
         flex-direction: column;
-        height: 75%;
+        height: 80%;
         justify-content: space-evenly;
     }
 
@@ -368,13 +368,17 @@ Do not put anything in this file - it's only here so that hugo won't throw an er
     }
 
     .desktop .hero__headline h2{
-        font-size: 18px;
+        font-size: 1.5vw;
     }
 
     @media only screen and (min-width:1440px) {
         .desktop .hero__headline{
             width: 403.188px;
         }
+        .desktop .hero__headline h2{
+            font-size: 21.6px;
+        }
+
     }
 
 
@@ -402,7 +406,7 @@ Do not put anything in this file - it's only here so that hugo won't throw an er
             margin: 0;
             padding: 0;
             position: absolute;
-            width: 28vw;
+            width: 22vw;
         }
         .hero__attorneys {
             display: block;
@@ -420,7 +424,7 @@ Do not put anything in this file - it's only here so that hugo won't throw an er
             padding: 0
         }
         .desktop picture.attorneys{
-            margin-left: 24vw;
+            margin-left: 18vw;
             margin-right: 1vw;
         }
         .hero__form-title {
