--- a/site/themes/airspace-hugo/static/css/landing-page-2019.css
+++ b/site/themes/airspace-hugo/static/css/landing-page-2019.css
@@ -633,6 +633,9 @@ h2 {
     .footer br{
         display: none;
     }
+    .footer img{
+        width: 290px;
+    }
 }
 .footer .logo {
     margin-bottom: 20px
@@ -792,6 +795,9 @@ a.nav-link {
 .wlf-form__container {
     margin: auto;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 @media only screen and (max-width:767px) {
     .wlf-form__container {
@@ -811,7 +817,7 @@ a.nav-link {
         margin: auto;
     }
 }
-@media only screen and (max-width:992px) {
+@media only screen and (max-width:991px) {
     .whywlf__form__container__before{
         padding:20px;
     }
@@ -823,7 +829,11 @@ a.nav-link {
     }
 
 }
-
+@media only screen and (min-width:992px) {
+    .whywlf__form__container__before{
+        padding:20px;
+    }
+}
 
 
 .wlf-form ul {
@@ -888,7 +898,7 @@ div.ginput_complex.ginput_container.gf_name_has_2 span {
     color: #37548a;
     display: block;
     font-size: 16px;
-    height: 40px;
+    height: 43px;
     margin-top: 0;
     width: 100%;
     transition: 0.15s all ease;
@@ -941,6 +951,9 @@ div.ginput_complex.ginput_container.gf_name_has_2 span {
     }
     .bottom-form.wlf-form.whywlf .form-group{
         margin-bottom: 12px;
+    }
+    .bottom-form h3{
+        line-height: 0.7;
     }
     .wlf-form{
         background: #e9e9e9;
