--- a/site/layouts/partials/hero.html
+++ b/site/layouts/partials/hero.html
@@ -99,7 +99,7 @@
                                 <div class="messages"></div>
                             </div>
                         </form>
-                            <p style="font-size: 10px;line-height: 0.9; margin-bottom: 0;">By submitting this form, you agree to receive calls at any time, including hours outside of business hours. This is so that we may reach you as soon as possible in order to consult on your potential case.</p>
+                            <p style="font-size: 8px; line-height: 1.25;color: #3c4d66;margin-bottom: 0;">By submitting this form, you agree to receive calls at any time, including hours outside of business hours. This is so that we may reach you as soon as possible in order to consult on your potential case.</p>
                     </div>
                 </div>
         </section>
