--- a/site/layouts/partials/head_custom.html
+++ b/site/layouts/partials/head_custom.html
@@ -428,7 +428,7 @@ Do not put anything in this file - it's only here so that hugo won't throw an er
             margin-right: 1vw;
         }
         .hero__form-title {
-            color: #000;
+            color: #3d4e68;
             font-size: 1.2vw;
             font-weight: 700
         }
