--- a/site/layouts/partials/support-text.html
+++ b/site/layouts/partials/support-text.html
@@ -1,4 +1,4 @@
-<div class="wlf-form whywlf bottom-form">
+<div class="wlf-form bottom-form">
     <div class="container">
         <div class="row">
             <div class="d-none d-lg-block col-lg-12 text-left" style="padding-left:0;">
