--- a/site/themes/airspace-hugo/static/css/landing-page-2019.css
+++ b/site/themes/airspace-hugo/static/css/landing-page-2019.css
@@ -56,7 +56,7 @@
     speak: none;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    /*font-size: 20vw;*/
+    font-size: 20vw;
 }
 
 @media only screen and (min-width:414px) {
@@ -71,7 +71,7 @@
         font-size: 39.68px;
     }
     .subhero__as-seen-on-icons{
-        justify-content: space-between;
+        justify-content: center;
     }
 }
 
@@ -337,7 +337,7 @@ h2 {
 .subhero__as-seen-on {
     display: flex;
     flex-direction: column;
-    font-size: 15px;
+    font-size: 14px;
     font-weight: bold;
     margin: 0;
     padding: 10px;
@@ -524,16 +524,19 @@ h2 {
 
 .whywlf {
     background: #FFF;
-    padding: 0;
+    padding: 0 5px;
     text-align: center;
 }
 @media (min-width: 992px) {
     .whywlf {
+        padding: 30px 5px;
+    }
+    .wlf-form.bottom-form{
         padding: 30px 0;
     }
 }
 @media (min-width: 1200px) {
-    .whywlf .container {
+    .wlf-form.bottom-form .container {
         max-width: 960px !important;
     }
 }
