--- a/site/layouts/partials/support-text.html
+++ b/site/layouts/partials/support-text.html
@@ -53,6 +53,7 @@
                             <div class="messages"></div>
                         </div>
                     </form>
+                    <p style="font-size: 8px;line-height: 1.25;color: #b4b4b4;margin-top: 10px;margin-bottom: 0;">By submitting this form, you agree to receive calls at any time, including hours outside of business hours. This is so that we may reach you as soon as possible in order to consult on your potential case.</p>
                 </div>
             </div>
             <div class="whywlf__paragraph_container offset-sm-1 col-sm-10 offset-md-2 col-md-8 offset-lg-0 col-lg-7">
