--- a/site/layouts/partials/hero.html
+++ b/site/layouts/partials/hero.html
@@ -39,8 +39,8 @@
                 </h2>
                 <picture class="superlawyers">
                     <source data-srcset="{{ .Site.BaseURL }}img/super-lawyers-desktop.webp" type="image/webp" class="img-fluid">
-                    <source data-srcset="{{ .Site.BaseURL }}img/super-lawyers-desktop.jpg" type="image/jpg" class="img-fluid">
-                    <img data-src="{{ .Site.BaseURL }}img/super-lawyers-desktop.jpg" src="" class="img-fluid lazyload" alt="Super Lawyers">
+                    <source data-srcset="{{ .Site.BaseURL }}img/super-lawyers-desktop.png" type="image/png" class="img-fluid">
+                    <img data-src="{{ .Site.BaseURL }}img/super-lawyers-desktop.png" src="" class="img-fluid lazyload" alt="Super Lawyers">
                 </picture>
             </div>
 
